feat: Create Main page buttons block

--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -23,3 +23,11 @@ body {
     width: 60px;
   }
 }
+.buttons-container {
+
+  .buttons-block {
+    button {
+      margin: 3px 3px 0px 0px;
+    }
+  }
+}
