--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -8,6 +8,7 @@ body {
     color: aliceblue;
   }
 }
+
 .create-update-car {
   display: flex;
   align-items: center;
@@ -23,11 +24,80 @@ body {
     width: 60px;
   }
 }
-.buttons-container {
 
-  .buttons-block {
+.buttons-block {
+  button {
+    margin: 3px 3px 0px 0px;
+  }
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  color: white;
+
+  h3 {
+    margin-left: 10px;
+  }
+}
+
+.update-car__inactive {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(112, 111, 110, 0.605);
+  }
+}
+
+.car-container {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.25);
+  height: 60px;
+  margin-top: 10px;
+  border-bottom: solid 2px white;
+  border-top: solid 2px white;
+
+  &::before {
+    content: "";
+    position: absolute;
+    right: 80px;
+    height: 100%;
+    width: 77px;
+    background-size: cover;
+    background-image: url(/assets/img/F1_chequered_flag.svg);
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    height: 1px;
+    border-bottom: dashed 1px white;
+    top: 50%;
+    width: 100%;
+    z-index: -1;
+  }
+
+  .car {
+    position: absolute;
+    width: 80px;
+    height: 40px;
+    bottom: 0px;
+  }
+
+  .select-remove-buttons {
+    position: relative;
+    display: flex;
+    p {
+      margin: 0;
+      margin-left: 10px;
+      color: white;
+    }
     button {
-      margin: 3px 3px 0px 0px;
+      margin-right: 3px;
     }
   }
 }
