--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -90,3 +90,14 @@ body {
     }
   }
 }
+
+.pagination {
+  button {
+    min-width: 35px;
+    margin: 4px 4px 0px 0px;
+    background-color: rgb(150 150 150);
+  }
+  .current-page {
+    background-color:  rgb(243, 243, 243);
+  }
+}
