--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -53,7 +53,7 @@ body {
   &::before {
     content: "";
     position: absolute;
-    right: 80px;
+    right: 15px;
     height: 100%;
     width: 77px;
     background-size: cover;
@@ -75,6 +75,7 @@ body {
     width: 80px;
     height: 40px;
     bottom: 0px;
+    left: 0px;
   }
 
   .select-remove-buttons {
@@ -90,7 +91,6 @@ body {
     }
   }
 }
-
 .pagination {
   button {
     min-width: 35px;
