feat: Create popup

--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -107,3 +107,17 @@ button {
     background-color: rgb(199, 199, 199);
   }
 }
+
+.popup {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.377);
+  z-index: 2;
+  color: aliceblue;
+}
