feat: Create winners page

--- a/app/src/styles/index.scss
+++ b/app/src/styles/index.scss
@@ -128,8 +128,35 @@ button {
   background-color: rgb(34 36 48 / 70%);
   padding: 0px 30px;
 
+  h2 {
+    margin-right: 10px;
+  }
+
   .car {
     width: 80px;
     margin: 0px 10px;
+  }
+}
+
+.winner-page {
+  border-spacing:  0px;
+  color: aliceblue;
+
+  th {
+    background-color: #7198b1;
+
+    button {
+      background-color: transparent;
+      border: none;
+      width: 100%;
+      padding: 5px;
+    }
+  }
+
+  td {
+    text-align: center;
+    .car {
+      width: 80px;
+    }
   }
 }
